<resources>
    <string name="app_name">My Exam</string>
    <string name="ultra_clean">Ultra Cleaner</string>
    <string name="i_have_read">I have read and acknowledged the Privacy Policy\nand the Terms of Service</string>
    <string name="start">start</string>
    <string name="loading">Loading</string>

    <string name="procent_95">95%</string>
    <string name="procent_20">20%</string>
    <string name="c">31\u00B0C</string>

    <string name="charging_ti">Charging time remaning\n13h 48m</string>
    <string name="charging_ti_2">Charging time remaning 13h 48m</string>
    <string name="gb_24_83_fr">23,64 Gb /\n24,83 free space</string>
    <string name="gb_24_83_fr_2">23,64 Gb /24,83 free space</string>
    <string name="cpu_tempera">CPU \ntemperature</string>
    <string name="c_cpu_tempera2">31\u00C2\u00B0C CPU temperature</string>

    <string name="charge_boos">Charge\nBooster</string>
    <string name="battery_sav">Battery\nSaver</string>
    <string name="optimizer">Optimizer</string>
    <string name="junk_cleane">Junk Cleaner</string>
    <string name="also_you_ca">Also you can</string>


    <string name="boost">Boost</string>
    <string name="boost_batte">Boost\nbattery</string>
    <string name="optimize">optimize</string>
    <string name="clean">clean</string>
</resources>